# CryptoSurferTrader

./: .env.example  .env.production  .gitignore  .replit  8trader8panda-pipeline.yml  ACCOUNT_CREATION_GUIDE.md  ALIBABA_CLOUD_DEPLOYMENT.md  CURRENT_STATUS_REPORT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_PROGRESS.md  DEPLOYMENT_SUMMARY.md  DNS_CONFIGURATION_GUIDE.md  DOMAIN_SETUP_GUIDE.md  Dockerfile  END_TO_END_TESTING_GUIDE.md  FINAL_TESTING_REPORT.md  FREE_TRADING_SETUP.md  GITHUB_SETUP.md  LIVE_TRADING_CHECKLIST.md  PRODUCTION_ROADMAP.md  PROJECT_PORTFOLIO.md  PUSH_TO_GITHUB.sh  README.md  README_ZH.md  TECHNICAL_DOCUMENTATION.md  TRADE_EXECUTION_GUIDE.md  USER_GUIDE.md  alibaba-cloud-deploy.sh  alibaba-ecs-proper-deploy.sh  alibaba-webplus-deploy.yml  automated-test-suite.js  deploy-actual-repo.sh  deploy-production.py  deploy-server.sh  deploy.sh  deploy_real_infrastructure.sh  ecosystem.config.js  event_monitor.py  intelligent-deploy.py  package-lock.json  (+11 more)
attached_assets/: Pasted--AGENT-TASK-Risk-Managed-Trade-Execution-Agent-OBJECTIVE-Create-a-Python-script-that--1750058772430_1750058772431.txt  Pasted--LLM-Driven-DevOps-Automation-System-Meta-Prompts-System-Orchestration-for-Continuous-Improveme-1750061742980_1750061742981.txt  Pasted--Product-NicheSignal-AI-An-autonomous-market-intelligence-platform-that-discovers-emerging-online-c-1750055790306_1750055790307.txt  Pasted--Service-restarts-being-deferred-etc-needrestart-restart-d-dbus-service-systemctl-restart-g-1749551569840_1749551569842.txt  (+24 more)
client/: index.html
server/: ai_deployment_agent.ts  data_service.ts  (+28 more)
(+58 files in other folders)
