[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=3.4.3",
    "gs-quant>=1.0.54",
    "nautilus-trader>=1.218.0",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "textblob>=0.19.0",
    "tweepy>=4.15.0",
    "websockets>=15.0.1",
]
